Added email validation to upComingEvents.js

--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -93,7 +93,9 @@
 				<div class="col-md-7" style="width: 100">
 					<input type="text" id="htmlLink" placeholder="Enter URL">
 				</div>
-				<div class="col-md-2 textb"></div>
+				<div class="col-md-2 textb">
+					<p id="htmlError"></p>
+				</div>
 			</div>
 			<br> <br>
 			<div class="row">
