URLValidation method update

--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -90,10 +90,10 @@
 			<br> <br>
 			<div class="row">
 				<div class="col-md-1 col-md-offset-2 texta">Enter URL:</div>
-				<div class="col-md-7" style="width: 100">
-					<input type="text" id="htmlLink" placeholder="Enter URL">
+				<div class="col-md-3" style="width: 100">
+					<input type="text" id="htmlLink" placeholder="Enter URL" size="35">
 				</div>
-				<div class="col-md-2 textb">
+				<div class="col-md-6 textb">
 					<p id="htmlError"></p>
 				</div>
 			</div>
@@ -106,16 +106,16 @@
 			<br>
 			<div class="row">
 				<div class="col-md-3 col-md-offset-3 ">
-					<input type="checkbox" name="1" id="checkBox1">
-					&nbsp; Guests can invite other guests
+					<input type="checkbox" name="1" id="checkBox1"> &nbsp;
+					Guests can invite other guests
 				</div>
 				<div class="col-md-6"></div>
 			</div>
 			<br>
 			<div class="row">
 				<div class="col-md-3 col-md-offset-3">
-					<input type="checkbox" name="2" id="checkBox2">
-					&nbsp; Guests can see other guests
+					<input type="checkbox" name="2" id="checkBox2"> &nbsp;
+					Guests can see other guests
 				</div>
 				<div class="col-md-6"></div>
 			</div>
@@ -254,7 +254,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<select id ="month">
+					<select id="month">
 						<option value=""></option>
 						<option value="01">01</option>
 						<option value="02">02</option>
@@ -301,7 +301,7 @@
 						<option value="29">29</option>
 						<option value="30">30</option>
 						<option value="31">31</option>
-					</select> / <select id ="year">
+					</select> / <select id="year">
 						<option value=""></option>
 						<option value="2014">2014</option>
 						<option value="2015">2015</option>
@@ -477,7 +477,7 @@
 						<option value="10">10</option>
 						<option value="11">11</option>
 						<option value="12">12</option>
-					</select> : <select id="eMinute">	
+					</select> : <select id="eMinute">
 						<option value=""></option>
 						<option value="1">01</option>
 						<option value="2">02</option>
@@ -568,7 +568,7 @@
 					<p id="attendeeFError"></p>
 				</div>
 			</div>
-			<br> 
+			<br>
 			<div class=row>
 				<div class="col-md-2 col-md-offset-3">Last Name:</div>
 				<div class="col-md-7"></div>
@@ -583,13 +583,12 @@
 			</div>
 			<br>
 			<div class="row">
-				<div class="col-md-2 col-md-offset-3">
-					Attendee Email:			
-				</div>
+				<div class="col-md-2 col-md-offset-3">Attendee Email:</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3 col-md-offset-3">
-					<input type="text" id="aemail" placeholder="johnnyappleseed@example.com" size="35">				
+					<input type="text" id="aemail"
+						placeholder="johnnyappleseed@example.com" size="35">
 				</div>
 				<div class="col-md-6">
 					<p id="attendeeEmailError"></p>
@@ -599,8 +598,9 @@
 			<div class="row">
 				<div class="col-md-2 col-md-offset-3">
 					<button type="button">Add Attendee</button>
-					
+
 				</div>
+				<div class="col-md-7"></div>
 			</div>
 			<br>
 			<div class="row">
