--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -554,7 +554,9 @@
 				<div class="col-md-3 texta">
 					<label for="attendee">Add Event Attendees: </label>
 				</div>
-				<div class="col-md-10"></div>
+				<div class="col-md-9">
+				<p id="top-error"></p>
+			</div>
 			</div>
 			<div class=row>
 				<div class="col-md-2 col-md-offset-3">First Name:</div>
@@ -597,7 +599,7 @@
 			<br>
 			<div class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<button type="button">Add Attendee</button>
+					<button type="button" onclick="attendeeValidation()">Add Attendee</button>
 
 				</div>
 				<div class="col-md-7"></div>
@@ -610,7 +612,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-3">
-					<table border=1 style="width: 500px">
+					<table border=1 id="" style="width: 500px">
 
 						<tr>
 							<td><b>#</b></td>
@@ -620,10 +622,10 @@
 						</tr>
 
 						<tr>
-							<td>&nbsp;</td>
-							<td>&nbsp;</td>
-							<td>&nbsp;</td>
-							<td>&nbsp;</td>
+							<td>1</td>
+							<td><p id="aF1"></p> <p id="aL1"></p></td>
+							<td><p id="aE1"></p></td>
+							<td></td>
 						</tr>
 
 						<tr>
