--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -599,7 +599,7 @@
 			<br>
 			<div class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<button type="button" onclick="attendeeValidation()">Add Attendee</button>
+					<button type="button" onclick="addAttendee()">Add Attendee</button>
 
 				</div>
 				<div class="col-md-7"></div>
@@ -612,41 +612,13 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-3">
-					<table border=1 id="" style="width: 500px">
+					<table border=1 id="table" style="width: 500px">
 
 						<tr>
 							<td><b>#</b></td>
 							<td><b>Name</b></td>
 							<td><b>Email</b></td>
 							<td><b>Action</b></td>
-						</tr>
-
-						<tr>
-							<td>1</td>
-							<td><p id="aF1"></p> <p id="aL1"></p></td>
-							<td><p id="aE1"></p></td>
-							<td></td>
-						</tr>
-
-						<tr>
-							<td>&nbsp;</td>
-							<td>&nbsp;</td>
-							<td>&nbsp;</td>
-							<td>&nbsp;</td>
-						</tr>
-
-						<tr>
-							<td>&nbsp;</td>
-							<td>&nbsp;</td>
-							<td>&nbsp;</td>
-							<td>&nbsp;</td>
-						</tr>
-
-						<tr>
-							<td>&nbsp;</td>
-							<td>&nbsp;</td>
-							<td>&nbsp;</td>
-							<td>&nbsp;</td>
 						</tr>
 					</table>
 				</div>
