--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -612,7 +612,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-3">
-					<table border=1 id="table" style="width: 500px">
+					<table border=1 id="attendeeTable" style="width: 500px">
 
 						<tr>
 							<td><b>#</b></td>
