--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -10,6 +10,7 @@
 <link href="css/main-layout.css" type="text/css" rel="stylesheet" />
 
 <script src="js/modifiedUpcomingEvents.js"></script>
+<script src="js/attendee.js"></script>
 </head>
 
 <body>
@@ -327,6 +328,7 @@
 						<option value="12">12</option>
 					</select> : <select id="minute">
 						<option value=""></option>
+						<option value="0">00</option>
 						<option value="1">01</option>
 						<option value="2">02</option>
 						<option value="3">03</option>
@@ -479,6 +481,7 @@
 						<option value="12">12</option>
 					</select> : <select id="eMinute">
 						<option value=""></option>
+						<option value="0">00</option>
 						<option value="1">01</option>
 						<option value="2">02</option>
 						<option value="3">03</option>
@@ -549,6 +552,9 @@
 					<p id="endTimeError"></p>
 				</div>
 			</div>
+			</form>
+			
+			<form onsubmit="return false">
 			<br> <br>
 			<div class="row">
 				<div class="col-md-3 texta">
@@ -564,7 +570,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<input type="text" id="afname" placeholder="First Name">
+					<input type="text" id="afname" placeholder="First Name"/>
 				</div>
 				<div class="col-md-7">
 					<p id="attendeeFError"></p>
@@ -577,7 +583,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<input type="text" id="alname" placeholder="Last Name">
+					<input type="text" id="alname" placeholder="Last Name" />
 				</div>
 				<div class="col-md-7">
 					<p id="attendeeLError"></p>
@@ -590,7 +596,7 @@
 			<div class="row">
 				<div class="col-md-3 col-md-offset-3">
 					<input type="text" id="aemail"
-						placeholder="johnnyappleseed@example.com" size="35">
+						placeholder="johnnyappleseed@example.com" size="35" />
 				</div>
 				<div class="col-md-6">
 					<p id="attendeeEmailError"></p>
@@ -599,8 +605,8 @@
 			<br>
 			<div class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<button type="button" onclick="addAttendee()">Add Attendee</button>
-
+					<button type="submit" id="attendeeButton" onclick="addAttendee()">Add Attendee</button>
+					
 				</div>
 				<div class="col-md-7"></div>
 			</div>
@@ -624,16 +630,14 @@
 				</div>
 				<div class="col-md-5"></div>
 			</div>
+			</form>
 			<br> <br>
 			<div class="row">
-
 				<div class="col-md-1 col-md-offset-9" style="margin-bottom: 10px;">
 					<button type="button" onclick="customValidation()">Submit</button>
 				</div>
 				<div class="col-md-2"></div>
 			</div>
-
-		</form>
 	</div>
 	<div id="footer-container" class="container-fluid">
 		<div class="row">
