Created another JS page for my object (function) that will validate if the user entered a month. So far have just created an array and private methods.

--- a/src/main/web-app/signup.html
+++ b/src/main/web-app/signup.html
@@ -41,11 +41,11 @@
 							<label for="name">Name:</label>
 						</div>
 						<div class="col-md-8">
-							<input type="text" id="firstnam"
+							<input type="text" id="firstName"
 							placeholder="First" >
-							<input type="text" id="middlenam"
+							<input type="text" id="middleName"
 							placeholder="Middle" >
-							<input type="text" id="lastnam"
+							<input type="text" id="lastName"
 							placeholder="Last" >
 						</div>
 					 </div>
@@ -56,11 +56,11 @@
 							<label for="birthday">Birthday:</label>
 						</div>
 						<div class="col-md-8">
-							<input type="text" id="monthE"
+							<input type="text" id="month"
 							placeholder="Month">
-							<input type="text" id="dayE"
+							<input type="text" id="day"
 							placeholder="Day">
-							<input type="text" id="yearE"
+							<input type="text" id="year"
 							placeholder="Year">
 						</div>
 					</div>
@@ -189,7 +189,7 @@
 						<div class="col-md-7">
 							<input type="password" id="password"
 							placeholder="Create Password">
-							<input type="password" id="cPassword"
+							<input type="password" id="confirmPassword"
 							placeholder="Confirm Password">
 						</div>
 					</div>
