Created events.js and added attendearray to that js. Impletemed changed into modifed.js(not working)

--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -11,6 +11,7 @@
 
 <script src="js/modifiedUpcomingEvents.js"></script>
 <script src="js/attendee.js"></script>
+<script src="js/event.js"></script>
 </head>
 
 <body>
@@ -107,7 +108,7 @@
 			<br>
 			<div class="row">
 				<div class="col-md-3 col-md-offset-3 ">
-					<input type="checkbox" name="1" id="checkBox1"> &nbsp;
+					<input type="checkbox" id="checkBox1" name="1" id="checkBox1"> &nbsp;
 					Guests can invite other guests
 				</div>
 				<div class="col-md-6"></div>
@@ -115,7 +116,7 @@
 			<br>
 			<div class="row">
 				<div class="col-md-3 col-md-offset-3">
-					<input type="checkbox" name="2" id="checkBox2"> &nbsp;
+					<input type="checkbox" id="checkBox2" name="2" id="checkBox2"> &nbsp;
 					Guests can see other guests
 				</div>
 				<div class="col-md-6"></div>
