Fixed error with adding attendeeArray inside event.js and simplified var names

--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -9,9 +9,9 @@
 <link href="css/upcomingEvents.css" type="text/css" rel="stylesheet" />
 <link href="css/main-layout.css" type="text/css" rel="stylesheet" />
 
-<script src="js/modifiedUpcomingEvents.js"></script>
 <script src="js/attendee.js"></script>
 <script src="js/event.js"></script>
+<script src="js/modifiedUpcomingEvents.js"></script>
 </head>
 
 <body>
@@ -66,7 +66,7 @@
 					<input type="text" id="fname" placeholder="" class="input-space">
 				</div>
 				<div class="col-md-7 textb">
-					<p id="fnameError"></p>
+					<p id="firstNameError"></p>
 				</div>
 			</div>
 			<br>
@@ -76,7 +76,7 @@
 					<input type="text" id="lname" placeholder="" class="input-space">
 				</div>
 				<div class="col-md-7 textb">
-					<p id="lnameError"></p>
+					<p id="lastNameError"></p>
 				</div>
 			</div>
 			<br>
