--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -571,7 +571,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<input type="text" id="afname" placeholder="First Name"/>
+					<input type="text" id="attendeeFirstName" placeholder="First Name"/>
 				</div>
 				<div class="col-md-7">
 					<p id="attendeeFError"></p>
@@ -584,7 +584,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-2 col-md-offset-3">
-					<input type="text" id="alname" placeholder="Last Name" />
+					<input type="text" id="attendeeLastName" placeholder="Last Name" />
 				</div>
 				<div class="col-md-7">
 					<p id="attendeeLError"></p>
@@ -596,7 +596,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 col-md-offset-3">
-					<input type="text" id="aemail"
+					<input type="text" id="attendeeEmail"
 						placeholder="johnnyappleseed@example.com" size="35" />
 				</div>
 				<div class="col-md-6">
