--- a/src/main/web-app/signup.html
+++ b/src/main/web-app/signup.html
@@ -7,6 +7,7 @@
 		<link href="css/index.css" type="text/css" rel="stylesheet"/>
 		<link href="css/main-layout.css" type="text/css" rel="stylesheet"/>
 		<script src="js/signup.js"></script>
+		<script src="js/CalendarMonth.js"></script>
 	</head>
 	<body>
 		<div id="header-container" class="container-fluid">
