Finished validating all elements correctly. Finished CalendarDay.js. Added CalendarDay.js into header on signup.html.

--- a/src/main/web-app/signup.html
+++ b/src/main/web-app/signup.html
@@ -8,6 +8,7 @@
 		<link href="css/main-layout.css" type="text/css" rel="stylesheet"/>
 		<script src="js/signup.js"></script>
 		<script src="js/CalendarMonth.js"></script>
+		<script src="js/CalendarDay.js"></script>
 	</head>
 	<body>
 		<div id="header-container" class="container-fluid">
