--- a/src/main/web-app/familySearch.html
+++ b/src/main/web-app/familySearch.html
@@ -5,38 +5,7 @@
 	rel="stylesheet" type="text/css" />
 <link href="css/familySearch.css" rel="stylesheet" type="text/css" />
 <link href="css/main-layout.css" rel="stylesheet" type="text/css" />
-<script>
-	function customValidation() {
-		var familySearchForm = document.forms["familySearchForm"];
-		var firstNameElement = familySearchForm.elements["firstName"];
-		var middleNameElement = familySearchForm.elements["middleName"];
-		var lastNameElement = familySearchForm.elements["lastName"];
-		
-		validateTextField(firstNameElement, 20, 2, "firstName");
-		validateTextField(middleNameElement, 20, 2, "middleName");
-		validateTextField(lastNameElement, 20, 2, "lastName");
-		
-		
-	}
-	function validateTextField(element, max, min, errorName){
-		var name= new RegExp("^[A-Z]+$","i");
-		var error = errorName ;
-		var error1 = " can not be longer than "  +  max + " characters.";
-		var error2 = " can not be less than " + min + " characters.";
-		var error3 = " can not be empty.";
-		
-		if(element.value.length > max) {
-			alert(error + error1);
-			searchOK = "false";
-		}else if(element.value == 0){
-			alert(error + error3);
-		}else if(element.value.length < min){
-			alert(error + error2);
-			searchOK = "false";
-		}
-	}
-	
-</script>
+<script type="text/javascript" src="js/familySearch.js"></script>
 </head>
 <body>
 	<div id="header-container" class="container-fluid">
@@ -73,18 +42,18 @@
 					<div class="row">
 
 						<div class="col-md-2 col-md-offset-2">
-							First Name: <input type="text" name="firstName"/>
-						
+							First Name: <input type="text" name="firstName" />
+
 						</div>
 						<div class="col-md-2">
-							Middle Name: <input type="text" name="middleName"/>
-							
+							Middle Name: <input type="text" name="middleName" />
+
 						</div>
 						<div class="col-md-2">
-							Last Name: <input type="text" name="lastName"/>
+							Last Name: <input type="text" name="lastName" />
 						</div>
 						<div class="col-md-2">
-							Age: <input type="text" name="text"/>
+							Age: <input type="text" name="age" />
 						</div>
 						<div class="col-md-2"></div>
 
@@ -93,7 +62,7 @@
 
 					<div class="row">
 
-						<div class="col-md-7 col-md-offset-3">
+						<div class="col-md-7 col-md-offset-2">
 							Do you wish to search for this person or people related to this
 							person? <input type="radio" name="text" value="">For <input
 								type="radio" name="text" value="">Related
@@ -108,8 +77,7 @@
 					<div class="row">
 
 						<div class="col-md-2 col-md-offset-2">
-							States
-							<select name="state">
+							States <select name="state">
 								<option value="choose">choose</option>
 								<option value="AL">AL</option>
 								<option value="AK">AK</option>
@@ -164,13 +132,13 @@
 							</select>
 						</div>
 						<div class="col-md-2">
-							City: <input type="text" name="city"/>
+							City: <input type="text" name="city" />
 						</div>
 						<div class="col-md-2">
-							Zip Code: <input type="text" name="zip code"/>
+							Zip Code: <input type="text" name="zipCode" />
 						</div>
 						<div class="col-md-2">
-							Region: <input type="text" name="region"/>
+							Region: <input type="text" name="region" />
 							<button type="button" onclick="customValidation()">Search</button>
 						</div>
 						<div class="col-md-2"></div>
