added formValidation.js, added formValidation.js to file list in conf.js and added tests to eventSpec.js

--- a/src/main/web-app/events.html
+++ b/src/main/web-app/events.html
@@ -10,6 +10,7 @@
 <link href="css/main-layout.css" type="text/css" rel="stylesheet" />
 
 <script src="libs/AngularJS/1.2/angular.min.js"></script>
+<script src="js/formValidation.js"></script>
 <script src="js/attendee.js"></script>
 <script src="js/event.js"></script>
 <script src="js/modifiedUpcomingEvents.js"></script>
